--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@
                       </div>
                     </div>
                     <div
-                      class="tp-caption   tp-resizeme"
+                      class="tp-caption tp-resizeme main-heading"
                       id="slide-1-layer-2"
                       data-x="23"
-                      data-y="269"
+                      data-y="259"
                       data-width="['auto']"
                       data-height="['auto']"
                       data-type="text"
@@ -392,7 +392,8 @@
                       <div
                         class="column mcb-column mcb-item-en293zk09 three-fifth column_column"
                       >
-                        <div class="column_attr clearfix" style>
+                        <div class="column_attr clearfix">
+                          <div class="wwd-heading-wrapper">
                           <h6 class="smaller-text text-black">WHAT WE DO</h6>
                           <h2 class="wwd-heading">
                             NEQUEPO
@@ -401,6 +402,7 @@
                             DOLOREM <br />
                             AMES DOLO
                           </h2>
+                        </div>
                           <!-- <hr class="no_line" style="margin: 0 auto 70px;"> -->
                           <div
                             class="hover_color align_left"
@@ -586,7 +588,6 @@
               <div
                 class="section mcb-section mcb-section-q68wofk3t"
                 id="partners"
-                style="padding-top:70px;padding-bottom:0px;background-color:''"
               >
                 <div class="section_wrapper mcb-section-inner">
                   <div
