--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <head>
     <!-- Basic Page Needs -->
     <meta charset="utf-8" />
-    <title>Be</title>
+    <title>German Cooperation</title>
     <meta name="description" content="" />
     <meta name="author" content="" />
 
@@ -18,28 +18,25 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
-      <!--
-      Favicons
-      --
     />
     <link rel="shortcut icon" href="content/event4/images/favicon.ico" />
 
     <!-- FONTS -->
     <link
       rel="stylesheet"
-      href="http://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,500,700"
+      href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,500,700"
     />
     <link
       rel="stylesheet"
-      href="http://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700"
+      href="https://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700"
     />
     <link
       rel="stylesheet"
-      href="http://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic,900"
+      href="https://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic,900"
     />
     <link
       rel="stylesheet"
-      href="http://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:100,300,400,400italic,500,600,700,800"
+      href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:100,300,400,400italic,500,600,700,800"
     />
 
     <!-- CSS -->
