--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                       >READ MORE <i class="icon-right-open"></i> </a
                     ><a
                       class="tp-caption   tp-resizeme  prettyphoto"
-                      href="https://www.youtube.com/watch?v=z0jjTU-H43M"
+                      href="https://www.youtube.com/watch?v=7V4pfuMiAx0"
                       target="_self"
                       id="slide-1-layer-3"
                       data-x="right"
@@ -403,7 +403,7 @@
                           <!-- <hr class="no_line" style="margin: 0 auto 70px;"> -->
                           <div
                             class="hover_color align_left"
-                            style="background-color:#000;"
+                            style="background-color:#f59442;"
                             ontouchstart="this.classList.toggle( 'hover');"
                           >
                             <div
