--- a/index.html
+++ b/index.html
@@ -407,6 +407,7 @@
                             class="hover_color align_left "
                             style="background-color:#f59442;"
                             ontouchstart="this.classList.toggle( 'hover');"
+                            id="counter"
                           >
                             <div
                               class="hover_color_bg green-box"
@@ -431,13 +432,15 @@
                                 <div class="clear-float">
                                   <div class="float-left">
                                     <div class="bold-text">
-                                      859<span>M</span>
+                                      <span class="counter-value" data-count="859">600</span>
+                                      <span class="count-small">M</span>
                                     </div>
                                     <p>Lorem ipsum dolorsit</p>
                                   </div>
                                   <div class="float-right">
                                     <div class="bold-text">
-                                      450<span>M</span>
+                                      <span class="counter-value" data-count="450">200</span>
+                                      <span class="count-small">M</span>
                                     </div>
                                     <p>Lorem ipsum dolorsit</p>
                                   </div>
