--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                       <a
                         id="logo"
                         href="index.html"
-                        title="BeEvent 4 - BeTheme"
+                        title="German Cooperation"
                         data-height="100"
                         data-padding="15"
                         ><img
@@ -248,7 +248,7 @@
                     </div>
                     <a
                       class="tp-caption tp-resizeme scroll tp-readmore"
-                      href="#about"
+                      href="#"
                       target="_self"
                       id="slide-1-layer-7"
                       data-x="30"
@@ -264,7 +264,7 @@
                       data-paddingright="[0,0,0,0]"
                       data-paddingbottom="[0,0,0,0]"
                       data-paddingleft="[0,0,0,0]"
-                      style="z-index: 7; white-space: nowrap; font-size: 15px; line-height: 24px; font-weight: 700; color: #c92031; letter-spacing: 0px;font-family:Barlow Semi Condensed;text-decoration: none;"
+                      style="z-index: 7; white-space: nowrap; font-size: 16px; line-height: 24px; font-weight: 700; color: #c92031; letter-spacing: 0px; font-family: Barlow Semi Condensed; text-decoration: none; transition: all .3s;"
                       >READ MORE <i class="icon-right-open"></i> </a
                     ><a
                       class="tp-caption   tp-resizeme  prettyphoto"
@@ -600,7 +600,7 @@
                         class="column mcb-column mcb-item-9fevyrunv one column_clients"
                       >
                         <ul class="clients clearfix">
-                          <li style="width:20%">
+                          <li style="width:20%" class="wow fadeInRight">
                             <div class="client_wrapper">
                               <div class="gs-wrapper">
                                 <img
@@ -611,7 +611,7 @@
                               </div>
                             </div>
                           </li>
-                          <li style="width:20%">
+                          <li style="width:20%" class="wow fadeInRight">
                             <div class="client_wrapper">
                               <div class="gs-wrapper">
                                 <img
@@ -622,7 +622,7 @@
                               </div>
                             </div>
                           </li>
-                          <li style="width:20%">
+                          <li style="width:20%" class="wow fadeInUp">
                             <div class="client_wrapper">
                               <div class="gs-wrapper">
                                 <img
@@ -633,7 +633,7 @@
                               </div>
                             </div>
                           </li>
-                          <li style="width:20%">
+                          <li style="width:20%" class="wow fadeInLeft">
                             <div class="client_wrapper">
                               <div class="gs-wrapper">
                                 <img
@@ -644,7 +644,7 @@
                               </div>
                             </div>
                           </li>
-                          <li style="width:20%">
+                          <li style="width:20%" class="wow fadeInLeft">
                             <div class="client_wrapper">
                               <div class="gs-wrapper">
                                 <img
