--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <link rel="stylesheet" href="css/global.css" />
     <link rel="stylesheet" href="css/structure.css" />
     <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/event4.css" />
     <link rel="stylesheet" href="css/custom.css" />
 
@@ -61,7 +62,7 @@
       <div id="Header_wrapper">
         <header id="Header">
           <div id="Top_bar">
-            <div class="mcb-wrap-inner">
+            <div class="mcb-wrap-inner" >
               <div class="container">
                 <div class="column one">
                   <div class="top_bar_left clearfix">
@@ -169,7 +170,7 @@
                     data-hideslideonmobile="off"
                     data-easein="default"
                     data-easeout="default"
-                    data-masterspeed="300"
+                    data-masterspeed="800"
                     data-rotate="0"
                     data-saveperformance="off"
                     data-title="Slide"
@@ -205,7 +206,7 @@
                       data-height="['none','none','none','none']"
                       data-type="image"
                       data-responsive_offset="on"
-                      data-frames='[{"delay":200,"speed":900,"frame":"0","from":"x:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
+                      data-frames='[{"delay":0,"speed":1500,"frame":"0","from":"x:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
                       data-textAlign="['inherit','inherit','inherit','inherit']"
                       data-paddingtop="[0,0,0,0]"
                       data-paddingright="[0,0,0,0]"
@@ -232,7 +233,7 @@
                       data-height="['auto']"
                       data-type="text"
                       data-responsive_offset="on"
-                      data-frames='[{"delay":300,"speed":900,"frame":"0","from":"x:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
+                      data-frames='[{"delay":0,"speed":1500,"frame":"0","from":"x:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
                       data-textAlign="['inherit','inherit','inherit','inherit']"
                       data-paddingtop="[0,0,0,0]"
                       data-paddingright="[0,0,0,0]"
@@ -258,13 +259,12 @@
                       data-type="text"
                       data-actions
                       data-responsive_offset="on"
-                      data-frames='[{"delay":400,"speed":900,"frame":"0","from":"x:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
+                      data-frames='[{"delay":0,"speed":2000,"frame":"0","from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","to":"o:1;","ease":"Power2.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
                       data-textAlign="['inherit','inherit','inherit','inherit']"
                       data-paddingtop="[0,0,0,0]"
                       data-paddingright="[0,0,0,0]"
                       data-paddingbottom="[0,0,0,0]"
                       data-paddingleft="[0,0,0,0]"
-                      style="z-index: 7; white-space: nowrap; font-size: 16px; line-height: 24px; font-weight: 700; color: #c92031; letter-spacing: 0px; font-family: Barlow Semi Condensed; text-decoration: none; transition: all .3s;"
                       >READ MORE <i class="icon-right-open"></i> </a
                     ><a
                       class="tp-caption   tp-resizeme  prettyphoto"
@@ -280,7 +280,7 @@
                       data-type="image"
                       data-actions
                       data-responsive_offset="on"
-                      data-frames='[{"delay":500,"speed":900,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
+                      data-frames='[{"delay":800,"speed":1500,"frame":"0","from":"z:0;rX:0;rY:0;rZ:0;sX:0.8;sY:0.8;skX:0;skY:0;opacity:0;","to":"o:1;","ease":"Power4.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
                       data-textAlign="[ 'inherit', 'inherit', 'inherit', 'inherit']"
                       data-paddingtop="[0,0,0,0]"
                       data-paddingright="[0,0,0,0]"
@@ -391,10 +391,10 @@
                       <div
                         class="column mcb-column mcb-item-en293zk09 three-fifth column_column"
                       >
-                        <div class="column_attr clearfix">
+                        <div class="column_attr clearfix" >
                           <div class="wwd-heading-wrapper wow fadeInRight">
                           <h6 class="smaller-text text-black">WHAT WE DO</h6>
-                          <h2 class="wwd-heading">
+                          <h2 class="wwd-heading" >
                             NEQUEPO
                             <br />
                             QUISQU AMES <br />
@@ -461,17 +461,18 @@
               </div>
 
               <!-- blog section -->
-              <div class="section blog-section mcb-section-tb22eyqgd">
+              <div class="section blog-section mcb-section-tb22eyqgd" data-aos="reveal-right-black">
                 <div class="section_wrapper mcb-section-inner">
                   <div class="mcb-wrap-inner">
                     <div
-                      class="wrap mcb-wrap mcb-wrap-j05kud3xb one-second valign-top clearfix left wow fadeInUp"
+                      class="wrap mcb-wrap mcb-wrap-j05kud3xb one-second valign-top clearfix left"
+                      
                     >
-                      <div class="heading-container">
+                      <div class="heading-container" data-aos="fade-right" data-aos-delay="500">
                         <h6>SMALL TITILE TEXT HERE</h6>
                         <h2>BLOG</h2>
                       </div>
-                      <div class="blog-wrapper first clearfix">
+                      <div class="blog-wrapper first clearfix" data-aos="fade-right" data-aos-delay="600">
                         <div
                           class="wrap mcb-wrap mcb-wrap-dvehf390m one-fourth valign-top clearfix"
                         >
@@ -502,7 +503,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="blog-wrapper clearfix">
+                      <div class="blog-wrapper clearfix" data-aos="fade-right" data-aos-delay="600">
                         <div
                           class="wrap mcb-wrap mcb-wrap-dvehf390m one-fourth valign-top clearfix"
                         >
@@ -533,17 +534,18 @@
                           </div>
                         </div>
                       </div>
-                      <a href="#" class="blog-button">Read All</a>
+                      <a data-aos="fade-right" data-aos-delay="500" href="#" class="blog-button">Read All</a>
                     </div>
 
                     <div
                       class="wrap mcb-wrap mcb-wrap-j05kud3xb one-second valign-top clearfix right"
+                      
                     >
-                      <div class="heading-container wow fadeInUp">
+                      <div class="heading-container" data-aos="fade-right" data-aos-delay="500">
                         <h6>SMALL TITILE TEXT HERE</h6>
                         <h2>PUBLICATIONS</h2>
                       </div>
-                      <div class="publication-content-wrapper wow fadeInRight">
+                      <div class="publication-content-wrapper" data-aos="fade-right" data-aos-delay="600">
                         <img src="./images/publication.png" alt="" />
                         <div class="publication-content">
                           <img
@@ -564,16 +566,16 @@
               <!-- blog section end -->
 
               <!-- newsletter section start -->
-              <div class="section newsletter-section mcb-section-tb22eyqgd">
+              <div class="section newsletter-section mcb-section-tb22eyqgd" data-aos="reveal-top" data-aos-delay="500">
                 <div class="section_wrapper mcb-section-inner">
                   <div class="mcb-wrap-inner">
                     <div
                       class="wrap mcb-wrap mcb-wrap-j05kud3xb one valign-top clearfix"
                     >
-                      <div class="newsletter-content-wrapper wow fadeInUp">
+                      <div class="newsletter-content-wrapper" data-aos="fade-down" data-aos-delay="500">
                         <img src="./images/email-icon.png" alt="">
                         <p><span>STAY UP TO DATE WITH NEWS</span><span>AND JOIN THE FREE NEWSLETTER</span></p>
-                        <div class="input-group wow fadeInDown" >
+                        <div class="input-group" >
                           <input type="text" class="form-control" placeholder="Your e-mail">
                           <div class="input-group-append">
                             <button class="btn" type="button">subscribe</button>
@@ -599,10 +601,10 @@
                       <div
                         class="column mcb-column mcb-item-9fevyrunv one column_clients"
                       >
-                        <ul class="clients clearfix">
-                          <li style="width:20%" class="wow fadeInRight">
+                        <ul class="clients clearfix" >
+                          <li style="width:20%" >
                             <div class="client_wrapper">
-                              <div class="gs-wrapper">
+                              <div class="gs-wrapper" data-aos="reveal-right">
                                 <img
                                   src="content/event4/images/event4_pic16-145x75.png"
                                   class="scale-with-grid wp-post-image"
@@ -611,9 +613,9 @@
                               </div>
                             </div>
                           </li>
-                          <li style="width:20%" class="wow fadeInRight">
+                          <li style="width:20%" >
                             <div class="client_wrapper">
-                              <div class="gs-wrapper">
+                              <div class="gs-wrapper" data-aos="reveal-right">
                                 <img
                                   src="content/event4/images/event4_pic17-145x75.png"
                                   class="scale-with-grid wp-post-image"
@@ -622,9 +624,9 @@
                               </div>
                             </div>
                           </li>
-                          <li style="width:20%" class="wow fadeInUp">
+                          <li style="width:20%" >
                             <div class="client_wrapper">
-                              <div class="gs-wrapper">
+                              <div class="gs-wrapper" data-aos="reveal-right">
                                 <img
                                   src="content/event4/images/event4_pic18-145x75.png"
                                   class="scale-with-grid wp-post-image"
@@ -633,9 +635,9 @@
                               </div>
                             </div>
                           </li>
-                          <li style="width:20%" class="wow fadeInLeft">
+                          <li style="width:20%"  >
                             <div class="client_wrapper">
-                              <div class="gs-wrapper">
+                              <div class="gs-wrapper" data-aos="reveal-right">
                                 <img
                                   src="content/event4/images/event4_pic19-145x75.png"
                                   class="scale-with-grid wp-post-image"
@@ -644,9 +646,9 @@
                               </div>
                             </div>
                           </li>
-                          <li style="width:20%" class="wow fadeInLeft">
+                          <li style="width:20%"  >
                             <div class="client_wrapper">
-                              <div class="gs-wrapper">
+                              <div class="gs-wrapper" data-aos="reveal-right">
                                 <img
                                   src="content/event4/images/event4_pic20-145x75.png"
                                   class="scale-with-grid wp-post-image"
@@ -667,6 +669,8 @@
               <div
                 class="section contact-section mcb-section mcb-section-7amiuld1c"
                 id="contact"
+                data-aos="reveal-top"
+                data-aos-offset="200"
               >
                 <div class="section_wrapper mcb-section-inner">
                   <div
@@ -676,7 +680,7 @@
                       <div
                         class="column mcb-column mcb-item-x3o3c2wtw one column_column column-margin-20px"
                       >
-                        <div class="column_attr clearfix wow fadeInUp">
+                        <div class="column_attr clearfix" data-aos="fade-up" data-aos-delay="200">
                           <h6>SMALL TITLE TEXT HERE</h6>
                           <h2 class="contact-heading">CONTACT</h2>
                         </div>
@@ -684,7 +688,7 @@
                       <div
                         class="column mcb-column mcb-item-mlkrmk71h one-second column_column"
                       >
-                        <div class="footer-menu wow fadeInDown">
+                        <div class="footer-menu" data-aos="fade-up" data-aos-delay="300">
                             <ul>
                               <li><a href="">Home</a></li>
                               <li><a href="">About</a></li>
@@ -706,7 +710,7 @@
                         <div
                           class="image_frame image_item no_link scale-with-grid no_border"
                         >
-                          <div class="image_wrapper wow fadeInUp">
+                          <div class="image_wrapper" data-aos="fade-up" data-aos-delay="400">
                             <img
                               class="scale-with-grid"
                               src="./images/logo.png"
@@ -722,7 +726,7 @@
                       <div
                         class="column mcb-column mcb-item-h2jqjrsh7 one column_column"
                       >
-                        <div class="column_attr clearfix wow fadeInUp">
+                        <div class="column_attr clearfix" data-aos="fade-up" data-aos-delay="500">
                           <div class="social-icons">
                             <a class="fb-icon" href="#"><i class="fa fa-icon-facebook"></i></a
                             ><a class="tw-icon" href="#"
@@ -771,6 +775,7 @@
 
     <!-- JS -->
     <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/aos.js"></script>
     <script src="js/wow.js"></script>
     <script src="js/mfn.menu.js"></script>
     <script src="js/jquery.plugins.js"></script>
