--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
               <div class="section wwd-section mcb-section-tb22eyqgd">
                 <div class="section_wrapper mcb-section-inner">
                   <div
-                    class="wrap wwd-front mcb-wrap mcb-wrap-25m61fy76 one valign-top bg-cover clearfix wow fadeInLeft"
+                    class="wrap wwd-front mcb-wrap mcb-wrap-25m61fy76 one valign-top bg-cover clearfix wow fadeInLeft" data-wow-duration="1.3s"
                     style="background-image:url('./images/what-we-do-front.png');background-repeat:no-repeat;background-size:auto;background-position-y: 75px;"
                   >
                     <div class="mcb-wrap-inner">
@@ -690,15 +690,15 @@
                       >
                         <div class="footer-menu" data-aos="fade-up" data-aos-delay="300">
                             <ul>
-                              <li><a href="">Home</a></li>
-                              <li><a href="">About</a></li>
-                              <li><a href="">Updates</a></li>
-                              <li><a href="">Publications</a></li>
-                              <li><a href="">Blogs</a></li>
-                              <li><a href="">Partners</a></li>
-                              <li><a href="">Contact</a></li>
-                              <li><a href="">Sitemap</a></li>
-                              <li><a href="">Disclaimer</a></li>
+                              <li><a href="#">Home</a></li>
+                              <li><a href="#">About</a></li>
+                              <li><a href="#">Updates</a></li>
+                              <li><a href="#">Publications</a></li>
+                              <li><a href="#">Blogs</a></li>
+                              <li><a href="#">Partners</a></li>
+                              <li><a href="#">Contact</a></li>
+                              <li><a href="#">Sitemap</a></li>
+                              <li><a href="#">Disclaimer</a></li>
                             </ul>
                         </div>
                       </div>
