updated anim time

--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                         class="column mcb-column mcb-item-en293zk09 three-fifth column_column"
                       >
                         <div class="column_attr clearfix" >
-                          <div class="wwd-heading-wrapper wow fadeInRight">
+                          <div class="wwd-heading-wrapper wow fadeInRight" data-wow-duration="1.3s">
                           <h6 class="smaller-text text-black">WHAT WE DO</h6>
                           <h2 class="wwd-heading" >
                             NEQUEPO
