--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
-    <link rel="shortcut icon" href="content/event4/images/favicon.ico" />
+    <link rel="shortcut icon" href="./images/giz-favicon.png" />
 
     <!-- FONTS -->
     <link
